# PCLDemo

./: CMakeLists.txt  Experiment Result.ods  kdtree.idx  training_data.h5  training_data.list
pcd_files/: bunny_transformed.pcd  sift_points.pcd
pcl_junk_src/: FastPointFeatureHistograms.cpp  GLViewer.cpp  GLViewer.h  NormalEstimation.cpp  NormalEstimationUsingIntegralImages.cpp  Pose.cpp  Pose.h  Registration.cpp  SimpleOpenNIViewer.cpp  cylinder_segmentation.cpp  example1.cpp  features_demo.cpp  run example  test.sh
pcl_junk_src/ClusterRecognitionand6DOFPoseEstimationusingVFHdescriptors/: build_tree.cpp  nearest_neighbors.cpp
pcl_junk_src/Registration/: iterative_closest_point.cpp  pairwise_incremental_registration.cpp
pcl_junk_src/correspondence_grouping/.svn/: all-wcprops  entries
src/: BasicOperation.cpp  PointFeatureHistograms.cpp  example1.cpp  ground_based_rgbd_people_detection.cpp  main.cpp  moc_registration.cxx  narf_keypoint_extraction.cpp  pcd_organized_edge_detection.cpp  pcd_viewer.cpp  pointcloud_to_vrml.cpp  pointcloud_to_vrml.h  pointcloud_to_vrml_test.cpp  random_sample_consensus.cpp  reading_points.cpp  registration.cpp  registration.h  registration.ui  template_alignment.cpp  tracking_object_in_real_time.cpp  tutorial.cpp  ui_registration.h
